--- a/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_6_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_6_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -16,10 +16,10 @@
                 <consultant role="advisor" ref="eft:person-420">Losang Gyaltsen</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-014-001"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-27T05:07:13.088Z" user="admin">27/10/2022 05:07:13</note>
+                <note type="lastUpdated" date-time="2023-01-17T10:54:20.397Z" user="admin">17/01/2023 10:54:20</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-23T18:52:39.151Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:52:39.151Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-23T18:54:30.339Z" user="john">Auto (update-contributors)</note>
@@ -57,6 +57,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-04T09:42:14.542Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-10-27T05:07:07.58Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-10-27T05:07:07.58Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
