--- a/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_6_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_6_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -14,9 +14,10 @@
                 <author role="translatorEng" ref="eft:person-211">Gareth Sparham</author>
                 <consultant role="advisor" ref="eft:person-419">Kalsang Damdul</consultant>
                 <consultant role="advisor" ref="eft:person-420">Losang Gyaltsen</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -47,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-17T10:54:20.397Z" user="admin">17/01/2023 10:54:20</note>
+                <note type="lastUpdated" date-time="2023-01-17T10:54:58.421Z" user="admin">17/01/2023 10:54:58</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-23T18:52:39.151Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:52:39.151Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-23T18:54:30.339Z" user="john">Auto (update-contributors)</note>
@@ -59,6 +60,7 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-10-27T05:07:07.58Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-17T10:54:52.817Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
