--- a/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
+++ b/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yi dags kha nas me 'bar skyabs pa'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Protection from the Blazing Flames Coming From the Mouths of Ghosts</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Protection from the Blazing Flames Coming From the Mouths of Ghosts</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha nas me 'bar ba la skyabs mdzad pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha nas me 'bar ba la skyabs mdzad pa'i gzungs/</title>
                 <author role="translatorMain" ref="contributors.xml#team-56"/>
@@ -14,10 +14,10 @@
                 <consultant role="projectManager" ref="contributors.xml#person-7">Dr. Paul Hackett</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-091-043"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-22T08:39:38.596Z" user="admin">22/03/2021 08:39:38</note>
+                <note type="lastUpdated" date-time="2023-01-18T07:51:55.131Z" user="admin">18/01/2023 07:51:55</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:10:37.807Z" user="line-tofte">3</note>
@@ -50,7 +50,7 @@
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T11:13:21.749Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T11:13:39.767Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T08:39:32.701Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-03-22T08:39:32.701Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2021-03-22T08:39:32.701Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-18T07:51:49.48Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-18T07:51:49.48Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
