--- a/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
+++ b/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
@@ -31,7 +31,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen, and Sun Fanglin</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -82,7 +82,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-11-10T20:17:22.252Z" user="admin">10/11/2022 20:17:22</note>
+                                <note type="lastUpdated" date-time="2023-01-18T16:58:08.48Z" user="celso">18/01/2023 16:58:08</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-17T08:56:54.094Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-17T08:56:54.094Z" user="line-tofte">2.g</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2021-03-04T13:26:57.795Z" user="line-tofte">2.f</note>
@@ -131,6 +131,8 @@
                                 <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-07T12:20:36.775Z" user="laura">Edit to bibliography from Wiesiek</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-26T07:41:28.017Z" user="cabie-sim">Auto (update-titles)</note>
                             <note type="updated" update="text-version" value="1.0.5" date-time="2022-11-10T20:17:18.946Z" user="martina-cotter">Updated folio references.</note>
+                            <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                            <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
