--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -10,33 +10,29 @@
                                 <title type="mainTitle" xml:lang="Bo-Ltn">byams pa’i seng ge’i sgra
                                         chen po</title>
                                 <title type="mainTitle" xml:lang="bo">བྱམས་པའི་སེང་གེའི་སྒྲ་ཆེན་པོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa byams pa’i seng ge’i
-                                        sgra chen po zhes bya ba theg pa chen po’i mdo</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བྱམས་པའི་སེང་གེའི་སྒྲ་ཆེན་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
                                         Great Lion’s Roar of Maitreya”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­maitreya­mahā­siṃhanāda­nāma­mahāyāna­sūtra</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བྱམས་པའི་སེང་གེའི་སྒྲ་ཆེན་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa byams pa’i seng ge’i
+                                        sgra chen po zhes bya ba theg pa chen po’i mdo</title>
                                 <title type="otherTitle" xml:lang="zh">《彌勒大獅子吼經》(大正藏：大寶積經摩訶迦葉會第二十三) </title>
-                                <author ref="eft:team-16" role="translatorMain">Translated by Karen
+                                <author role="translatorMain" ref="eft:team-16">Translated by Karen
                                         Liljenberg and Ulrich Pagel<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <consultant role="projectManager" ref="eft:person-115">Karen
-                                        Liljenberg</consultant>
-                                <author role="translatorEng" ref="eft:person-116">Ulrich
-                                        Pagel</author>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
+                                <consultant role="projectManager" ref="eft:person-115">Karen Liljenberg</consultant>
+                                <author role="translatorEng" ref="eft:person-116">Ulrich Pagel</author>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
-                                <editor role="projectEditor" ref="eft:person-50">Andreas
-                                        Doctor</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                                 <sponsor ref="sponsors.xml#sponsor-194">Ting Xie, Guowen Xie,
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -80,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-13T13:36:17.21Z" user="admin">13/07/2022 13:36:17</note>
+                                <note type="lastUpdated" date-time="2023-01-19T10:59:20.51Z" user="admin">19/01/2023 10:59:20</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -118,9 +114,10 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2022-06-29T13:07:22.573Z" user="line-tofte">2.a</note>
                                 <note type="updated" update="text-version" value="0.1.14" date-time="2022-06-29T13:07:22.573Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-10T18:24:06.595Z" user="john">Harmonization of trailer and colophon</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-10T18:24:06.595Z" user="john">Harmonization of trailer and colophon</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-19T10:59:14.728Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -163,8 +160,7 @@
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
                                 <lb/>
-                                <p tid="7">Sponsored by Ting Xie, Guowen Xie,
-                                        Xiangzhi Yu, Jiayu Xie.</p>
+                                <p tid="7">The generous sponsorship of Ting Xie, Guowen Xie, Xiangzhi Yu, and Jiayu Xie, which helped make the work on this translation possible, is most gratefully acknowledged.</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
