--- a/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
+++ b/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <consultant role="projectManager" ref="eft:person-200">Kaia Fischer</consultant>
-                <editor role="projectEditor" ref="eft:person-165">Robert Miller</editor>
+                <editor role="associateEditor" ref="eft:person-165">Robert Miller</editor>
                 <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,13 +40,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-19T15:19:01.557Z" user="admin">19/01/2023 15:19:01</note>
+                <note type="lastUpdated" date-time="2023-01-19T15:20:41.001Z" user="admin">19/01/2023 15:20:41</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-22T12:40:57.773Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2023-01-10T12:19:48.158Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-10T12:19:48.158Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-19T15:18:56.029Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-19T15:18:56.029Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-19T15:20:35.455Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
