--- a/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -20,11 +20,11 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2019</date>
+                <edition>v 0.0.15 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-072-011"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-16T12:50:33.249Z" user="admin">16/01/2023 12:50:33</note>
+                <note type="lastUpdated" date-time="2023-01-20T12:34:09.1Z" user="admin">20/01/2023 12:34:09</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-01-16T12:49:51.079Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-01-16T12:50:27.666Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-01-16T12:50:27.666Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-01-20T12:34:03.489Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-01-20T12:34:03.489Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
