--- a/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -18,9 +18,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2019</date>
+                <edition>v 0.0.16 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T12:34:09.1Z" user="admin">20/01/2023 12:34:09</note>
+                <note type="lastUpdated" date-time="2023-01-20T12:34:46.93Z" user="admin">20/01/2023 12:34:46</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -66,6 +67,7 @@
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-01-16T12:50:27.666Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-01-20T12:34:03.489Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2023-01-20T12:34:03.489Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2023-01-20T12:34:41.328Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
