--- a/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
+++ b/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
@@ -10,23 +10,27 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa lag na rdo rje'i mdo theg pa chen po</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­vajrapāṇi­mahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-034-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh29" type="text">
                     <ref>Toh 29</ref>
                     <biblScope>vol:34, ff.178r-178v(pp.355-356)</biblScope>
-                    <location count-pages="2">
-                        <start volume="34" page="357"/>
-                        <end volume="34" page="358"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="34" start-page="355" end-page="356"/>
                     </location>
                     <idno parent-id="O1JC114941JC14665" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11548" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:28:28 by admin</note>
+                <note type="lastUpdated" date-time="2023-01-20T13:11:47.039Z" user="admin">20/01/2023 13:11:47</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
