--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">me tog brtsegs pa'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">puṣpakūṭadhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, the Heap of Flowers</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Heap of Flowers</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-088-010"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh516" type="text">
                     <ref>Toh 516</ref>
                     <biblScope>vol.88, ff.31r-33vpp.61-66)</biblScope>
-                    <location count-pages="6">
-                        <start volume="88" page="63"/>
-                        <end volume="88" page="68"/>
+                    <location work="UT4CZ5369" count-pages="6">
+                        <volume number="88" start-page="61" end-page="66"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12238" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh886" type="text">
                     <ref>Toh 886</ref>
                     <biblScope>vol.100, ff.159v-161v(pp.318-322)</biblScope>
-                    <location count-pages="5">
-                        <start volume="100" page="320"/>
-                        <end volume="100" page="324"/>
+                    <location work="UT4CZ5369" count-pages="5">
+                        <volume number="100" start-page="318" end-page="322"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12648" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:24 by admin</note>
+                <note type="lastUpdated" date-time="2023-01-20T13:14:02.249Z" user="admin">20/01/2023 13:14:02</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:13:58.019Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
