--- a/translations/tengyur/placeholders/091-001_toh3807-satasahasrikaprajnaparamitabrhattika.xml
+++ b/translations/tengyur/placeholders/091-001_toh3807-satasahasrikaprajnaparamitabrhattika.xml
@@ -13,11 +13,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'bum kyi gnod 'joms/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT23703-091-001"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh3807" type="text">
@@ -35,7 +36,7 @@
                 <link type="isCommentaryOf" target="toh8"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-18T00:42:34.76Z" user="admin">18/11/2022 00:42:34</note>
+                <note type="lastUpdated" date-time="2023-01-20T13:17:32.649Z" user="admin">20/01/2023 13:17:32</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3786-3823_PH_new_v2.4.xml" date-time="2021-11-02T14:12:33.078Z" user="admin"/>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-21T20:00:03.876Z" user="john">Auto (update-locations)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-21T22:38:45.274Z" user="john">Auto (update-locations)</note>
@@ -44,6 +45,8 @@
                 <note type="title" date-time="2022-11-18T00:42:29.266Z" user="celso">[Attributed to King khri srong lde'u btsan in the 'phang thang ma inventory]</note>
                 <note type="title" date-time="2022-11-18T00:42:29.266Z" user="celso">This text is known as the “lesser ‘destroyer of harms’ commentary” despite being longer, as a text, than the “greater” one, Toh 3808.</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-11-18T00:42:29.266Z" user="celso">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-01-20T13:17:28.451Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-20T13:17:28.451Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
