--- a/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
+++ b/translations/kangyur/translations/058-001_toh152-the_sutra_of_the_questions_of_sagaramati.xml
@@ -29,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-5">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, and Zhao Xuan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.14 <date>2022</date>
+                <edition>v 1.5.17 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:07:29.494Z" user="admin">26/07/2022 06:07:29</note>
+                <note type="lastUpdated" date-time="2023-01-20T17:28:40.791Z" user="admin">20/01/2023 17:28:40</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:14:35.787Z" user="mike">2.d</note>
@@ -136,6 +136,9 @@
                 <note type="updated" update="text-version" value="1.5.12" date-time="2022-03-09T22:35:24.84Z" user="celso">Removed duplicate glossary entry</note>
                 <note type="updated" update="text-version" value="1.5.13" date-time="2022-04-11T12:27:59.47Z" user="laura">Bibliography update</note>
                 <note type="updated" update="text-version" value="1.5.14" date-time="2022-07-26T06:07:21.593Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.5.15" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.5.16" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.5.17" date-time="2023-01-20T17:28:37.865Z" user="martina-cotter">updated footnote</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -240,7 +243,7 @@
                     <p tid="2027">The sūtra is also occasionally included in lists or anthologies of “sūtras of definitive meaning” (<foreign xml:lang="Sa-Ltn">nītārtha</foreign>, <foreign xml:lang="Bo-Ltn">nges don</foreign>) compiled by Tibetan authors, although
                         with far less frequency than the texts most often found in such lists.</p>
                     <milestone unit="chunk" xml:id="UT22084-058-001-11"/>
-                    <p tid="2028">The full sūtra was translated into English in 1955 by Edward Conze,<note place="end" xml:id="UT22084-058-001-12">
+                    <p tid="2028">As for translations into English, in 1955 Edward Conze was the first to translate a brief excerpt of the sūtra,<note place="end" xml:id="UT22084-058-001-12">
                             Conze 1955, p. 136.</note> and numerous short sections of <title xml:lang="en">The Questions of Sāgaramati</title> have
                         appeared in translations of the works of Asaṅga and various Tibetan commentators.<note place="end" xml:id="UT22084-058-001-13"> See for example Ju Mipham 2004 and Tsongkhapa 2000. Numerous other such brief citations have appeared in
                             translation.</note> However, apart from such brief translated excerpts, the sūtra has not, to our knowledge, received
@@ -6506,13 +6509,12 @@
                     </item>
 
                     <item>
-                        <gloss type="person" xml:id="UT22084-058-001-2232">
+                        <gloss xml:id="UT22084-058-001-2232" type="person" mode="match">
                             <term>Rāhula</term>
                             <term xml:lang="Bo-Ltn">sgra gcan zin</term>
                             <term xml:lang="bo">སྒྲ་གཅན་ཟིན།</term>
                             <term xml:lang="Sa-Ltn">Rāhula</term>
-                            <term type="definition">The Buddha’s son who became the first novice monk and a prominent member of his monastic
-                                saṅgha.</term>
+                            <term type="definition">The Buddha’s son, who became the first novice monk and a prominent member of his monastic saṅgha.</term>
                         </gloss>
                     </item>
                     <item>
