--- a/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -11,10 +11,10 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-087-011"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
             </sourceDesc>
             <notesStmt>
                 <note>Note: not identified in Toh.</note>
-                <note type="lastUpdated" date-time="2022-04-25T12:57:47.905Z" user="admin">25/04/2022 12:57:47</note>
+                <note type="lastUpdated" date-time="2023-01-23T10:07:20.542Z" user="admin">23/01/2023 10:07:20</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto (update-sponsorship)</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-11T13:18:33.995Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-11T13:18:54.704Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-25T12:57:41.984Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-01-23T10:07:15.029Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-23T10:07:15.029Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
