--- a/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
+++ b/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
@@ -14,10 +14,10 @@
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-072-005"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-17T09:09:44.28Z" user="admin">17/01/2023 09:09:44</note>
+                <note type="lastUpdated" date-time="2023-01-24T12:33:37.352Z" user="admin">24/01/2023 12:33:37</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">3</note>
@@ -45,6 +45,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-10T15:55:03.566Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T09:09:38.71Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-17T09:09:38.71Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-24T12:33:31.752Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-24T12:33:31.752Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
