--- a/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
+++ b/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
@@ -41,7 +41,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Matthew, Vivian, Ye Kong and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.40.12 <date>2022</date>
+                <edition>v 1.40.14 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -79,7 +79,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-29T18:44:48.647Z" user="admin">29/12/2022 18:44:48</note>
+                <note type="lastUpdated" date-time="2023-01-24T19:10:41.324Z" user="martina-cotter">24/01/2023 19:10:41</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-18T03:21:25.442Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-06-18T15:44:43.637Z" user="celso">v 1.33 2019</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-06-21T14:15:47.78Z" user="celso">v 1.34 2019</note>
@@ -164,6 +164,8 @@
                 <note type="updated" update="text-version" value="1.40.10" date-time="2022-06-10T11:13:34.498Z" user="celso">minor correction to bibl entry</note>
                 <note type="updated" update="text-version" value="1.40.11" date-time="2022-06-30T08:53:01.2Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.40.12" date-time="2022-12-29T18:44:45.093Z" user="andre">Gṛddhrakūṭa corrected to Gṛdhrakūṭa</note>
+                <note type="updated" update="text-version" value="1.40.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.40.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -30838,13 +30840,11 @@
                             the French in Pruden (1988–1990).</bibl>
                         <bibl xml:id="UT22084-031-002-2805">Vasubandhu/Dāṃṣṭrasena. <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa ’bum pa dang nyi
                                 khri lnga stong pa dang khri brgyad stong pa’i rgya cher bshad
-                                pa</title> (<title xml:lang="Sa-Ltn">
-                                <ref rend="pending" target="https://read.84000.co/translation/toh3808.html">Śata­sahāsrikā­pañca­viṃśati­sāhasrikāṣṭā­daśa­sāhasrikā­prajnā-pāramitā­bṛhaṭṭīkā</ref>
-                            </title>)
+                                pa</title> (<title xml:lang="Sa-Ltn">Śata­sahāsrikā­pañca­viṃśati­sāhasrikāṣṭā­daśa­sāhasrikā­prajnā-pāramitā­bṛhaṭṭīkā</title>)
                             [The Long Explanation of the Noble Perfection of Wisdom in One Hundred
                             Thousand, Twenty-Five Thousand, and Eighteen Thousand Lines]. Toh 3808,
-                            Degé Tengyur vol. 93 (shes phyin, pha), fol. 1b–2292b; also TPD 55:
-                            645–1376. </bibl>
+                            Degé Tengyur vol. 93 (shes phyin, pha), fol. 1b–292b; also TPD 55:
+                            645–1376. English translation in Sparham (2022). </bibl>
                         <bibl xml:id="UT22084-031-002-2806">Vi­mukti­sena. <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag nyi shu lnga pa’i man
                                 ngag gi bstan bcos mngon par rtogs pa’i rgyan gyi ’grel pa</title>
                                 (<title xml:lang="Sa-Ltn">
@@ -31051,10 +31051,16 @@
                         University of Hawaii Press, 2005.</bibl>
                     <bibl xml:id="UT22084-031-002-2859">Sparham, Gareth, trans. (2006-2012). <title xml:lang="en">Abhisamayālaṃkāra with vṛtti and ālokā / vṛtti by Ārya Vi­mukti­sena;
                             ālokā by Haribhadra</title>. 4 vols. Fremont, CA: Jain Publishing.</bibl>
-                    <bibl xml:id="UT22084-031-002-5550">———trans. (2022). <title xml:lang="en">
+                    <bibl xml:id="UT22084-031-002-5550">———trans. (2022a). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh10.html">The Transcendent Perfection of Wisdom in Eighteen Thousand Lines</ref>
                         </title> (<title xml:lang="Sa-Ltn">Aṣṭa­daśa­sāhasrikā­prajñā­pāramitā</title>, Toh 10). 84000:
                         Translating the Words of the Buddha.</bibl>
+                    <bibl xml:id="UT22084-031-002-5551">———, trans. (2022b). <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh3808.html">The Long Explanation of the Noble Perfection of
+                            Wisdom in One Hundred Thousand, Twenty-Five Thousand, and Eighteen Thousand
+                            Lines</ref>
+                    </title> (<title xml:lang="Sa-Ltn">*Ārya­śata­sāhasrikā­pañca­viṃśati­sāhasrikāṣṭā­daśa­sāhasrikā­prajñā­pāramitā­bṛhaṭṭīkā</title>, Toh
+                        3808). 84000: Translating the Words of the Buddha, 2022.</bibl>
                     <bibl xml:id="UT22084-031-002-2860">Strauch, Ingo. (2007–2008), “The Bajaur
                         collection: A new collection of Kharoṣṭhī manuscripts. A preliminary
                         catalogue and survey.”</bibl>
