--- a/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
+++ b/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
@@ -41,7 +41,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Matthew, Vivian, Ye Kong and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.40.14 <date>2022</date>
+                <edition>v 1.40.15 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -79,7 +79,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-24T19:10:41.324Z" user="martina-cotter">24/01/2023 19:10:41</note>
+                <note type="lastUpdated" date-time="2023-01-24T19:34:44.973Z" user="admin">24/01/2023 19:34:44</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-18T03:21:25.442Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-06-18T15:44:43.637Z" user="celso">v 1.33 2019</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-06-21T14:15:47.78Z" user="celso">v 1.34 2019</note>
@@ -166,6 +166,7 @@
                 <note type="updated" update="text-version" value="1.40.12" date-time="2022-12-29T18:44:45.093Z" user="andre">Gṛddhrakūṭa corrected to Gṛdhrakūṭa</note>
                 <note type="updated" update="text-version" value="1.40.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.40.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.40.15" date-time="2023-01-24T19:34:41.285Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
