--- a/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
+++ b/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
@@ -28,7 +28,7 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.8 <date>2022</date>
+                <edition>v 1.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -80,7 +80,7 @@
 
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-20T17:08:50.553Z" user="admin">20/01/2023 17:08:50</note>
+        <note type="lastUpdated" date-time="2023-01-24T19:38:48.493Z" user="admin">24/01/2023 19:38:48</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-04T08:27:00.524Z" user="line-tofte">Auto (update-contributors)</note>
@@ -126,6 +126,7 @@
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-20T17:08:47.744Z" user="martina-cotter">Updated typo.</note>
+          <note type="updated" update="text-version" value="1.0.9" date-time="2023-01-24T19:38:45.655Z" user="martina-cotter">Added pending links.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -611,7 +612,7 @@
               form”).</note> the bodhisattva great being, noble Avalokiteśvara, while practicing the
             profound perfection of wisdom, looked and saw that the five aggregates are also<note place="end" xml:id="UT22084-034-009-67"> According to Vimalamitra’s commentary, the word “also”
               indicates that Avalokiteśvara also saw that the sense sources and the elements
-              likewise are empty of an intrinsic nature. (<ref target="https://read.84000.co/translation/toh3808.html" rend="pending">Toh
+              likewise are empty of an intrinsic nature. (<ref target="https://read.84000.co/translation/toh3818.html" rend="pending">Toh
                 3818</ref>, F.271.a)<!--&lt;Reference Toh 3818
               271a&gt;-->
                         </note> empty of an intrinsic nature.<note place="end" xml:id="UT22084-034-009-68"> Stok: “and he saw that the five
@@ -620,7 +621,7 @@
               Tibetan agrees with Attwood’s proposed reading of the Sanskrit. However, unlike
               Attwood, we also believe that the same reading can be applied to the Tibetan text in
               both Recension A and Recension B. Besides simply making better sense overall, this
-              reading is also supported by Vimalamitra’s commentary on this passage (<ref target="https://read.84000.co/translation/toh3808.html" rend="pending">Toh
+              reading is also supported by Vimalamitra’s commentary on this passage (<ref target="https://read.84000.co/translation/toh3818.html" rend="pending">Toh
                 3818</ref>, F.270.a–F.271.b)<!--&lt;Reference Toh 3818 270a–271b&gt;-->, and,
               moreover, it agrees semantically with the shorter version of <title xml:lang="en">The
                 Heart Sūtra</title> in Chinese, Sanskrit, and Tibetan. Attwood’s analysis of the
