--- a/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
+++ b/translations/kangyur/translations/051-001_toh113-sutra_of_the_white_lotus_of_true_dharma.xml
@@ -33,7 +33,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May &amp; George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.8 <date>2022</date>
+                <edition>v 1.2.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -70,7 +70,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:28:39.068Z" user="admin">26/07/2022 04:28:39</note>
+                <note type="lastUpdated" date-time="2023-01-24T19:40:56.281Z" user="admin">24/01/2023 19:40:56</note>
                 <note type="updated" update="text-version" value="v 1.06" date-time="2019-03-09T18:07:31.011Z" user="john">v 1.06 2018</note>
                 <note type="updated" update="text-version" value="v 1.09" date-time="2019-04-10T07:14:09.27Z" user="john">v 1.09 2018</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-06-18T16:02:50.021Z" user="celso">v 1.12 2019</note>
@@ -129,6 +129,9 @@
                 <note type="updated" update="text-version" value="1.2.6" date-time="2022-05-19T14:06:24.577Z" user="martina-cotter">Updated milestone 24.7.</note>
                 <note type="updated" update="text-version" value="1.2.7" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.2.8" date-time="2022-07-26T04:28:36.934Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.2.9" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.2.10" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-24T19:40:53.088Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -20538,8 +20541,7 @@
                         Toh 3808, Degé Tengyur vol. 93 (sher phyin, pha), folios 1a–292b. English
                         translation: Sparham, Gareth. <title xml:lang="en">The Long Explanation of
                             the One Hundred Thousand, Twenty-five Thousand, and Eighteen Thousand
-                            Perfection of Wisdom Sūtras</title>. 84000: Translating the Words of the
-                        Buddha, forthcoming.</bibl>
+                            Perfection of Wisdom Sūtras</title>. English translation in Sparham (2022).</bibl>
                     <bibl xml:id="UT22084-051-001-3117">Dharmamitra. <title xml:lang="Bo-Ltn">tshig
                             rab tu gsal ba</title> (<title xml:lang="Sa-Ltn">
                             <ref rend="pending" target="https://read.84000.co/translation/toh3796.html">Prasphuṭapadā</ref>
@@ -20704,6 +20706,13 @@
                                 Bhūmis</ref>
                         </title> (<title xml:lang="Sa-Ltn">Daśabhūmika</title>, Toh 44-31). 84000:
                         Translating the Words of the Buddha, 2021.</bibl>
+                    <bibl xml:id="UT22084-051-001-6367">Sparham, Gareth, trans. (2022). <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh3808.html">The Long Explanation of the Noble Perfection of
+                            Wisdom in One Hundred Thousand, Twenty-Five Thousand, and Eighteen Thousand
+                            Lines</ref>
+                    </title> (<title xml:lang="Sa-Ltn">*Ārya­śata­sāhasrikā­pañca­viṃśati­sāhasrikāṣṭā­daśa­sāhasrikā­prajñā­pāramitā­bṛhaṭṭīkā</title>, Toh
+                        3808). 84000: Translating the Words of the Buddha, 2022.</bibl>
+                    
                     <bibl xml:id="UT22084-051-001-3152">Schoening, Jeffrey. “Translated Sutra
                         Commentaries in Tibet.” In <title xml:lang="en">Tibetan Literature: Studies
                             in Genre</title>, edited by José Cabezón and Roger Jackson, 111–124.
