--- a/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
+++ b/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
@@ -11,9 +11,11 @@
                 <consultant role="projectManager" ref="eft:person-120">Cuilan Liu</consultant>
                 <author role="translatorEng" ref="eft:person-120">Cuilan Liu</author>
                 <author role="translatorEng" ref="eft:person-394">Susan Roach</author>
+                <author role="translatorEng" ref="eft:person-121">Andy Francis</author>
+                <author role="translatorEng" ref="eft:person-122">Jamyang Rinchen</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -33,9 +35,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T09:44:22.486Z" user="admin">08/08/2022 09:44:22</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-07T11:14:31.388Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T09:44:14.428Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-08T09:44:14.428Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-26T10:27:14.223Z" user="admin">26/01/2023 10:27:14</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-07T11:14:31.388Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T09:44:14.428Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-08T09:44:14.428Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-26T10:27:08.587Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
